# openmw

./: .gitattributes  CMakeLists.txt  CMakePresets.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ios-device-test.yml
.github/workflows/: ios-ci.yml  ios-deps-ci.yml  push.yml
CI/ios/: check-payload-safety.sh  find-product.sh  package-artifacts.sh  smoke-simulator.sh  test-roadmap-contract.js  validate-bundle.sh  validate-debug-symbols.sh  validate-product-profile.cmake
apps/openmw/: CMakeLists.txt
apps/openmw-ios-bootstrap/: BootstrapStatus.cpp  BootstrapStatus.hpp  CMakeLists.txt  Info.plist.in  Main.mm
cmake/: CheckLuaCustomAllocator.cmake  OpenMWIOSProfile.cmake
components/: CMakeLists.txt
docs/ios-port/: ADR-0001-RENDERING.md  ADR-0002-IOS-ONLY-SCOPE.md  BUILDING_IOS.md  CI_IOS.md  DEPENDENCY_LOCK.md  DEVICE_MATRIX.md  FEASIBILITY.md  FORK_WORKFLOW.md  G0_EVIDENCE.md  PROJECT_MAP.md  README.md  ROADMAP.md  TEST_PLAN.md
ios-deps/: README.md  dependencies.lock.json  vcpkg-configuration.json  vcpkg.json
ios-deps/overlay-ports/bullet3/: ios-collision-only.patch  portfile.cmake  vcpkg.json
ios-deps/overlay-ports/ffmpeg/: 0020-fix-aarch64-libswscale.patch  build.sh.in  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
ios-deps/overlay-ports/gl4es/: darwin-no-alias.patch  disable-tests.patch  gl4es-config.cmake  portfile.cmake  vcpkg.json
ios-deps/overlay-ports/icu/: disable-escapesrc-tool.patch  disable-static-prefix.patch  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
ios-deps/overlay-ports/lua/: CMakeLists.txt  ios-disable-process.patch  lua.hpp  portfile.cmake  vcpkg.json
ios-deps/overlay-ports/mygui/: .gitattributes  ios-engine-only.patch  llvm-char-types.patch  numeric-version-print.patch  portfile.cmake  vcpkg.json
ios-deps/overlay-ports/openal-soft/: portfile.cmake  vcpkg.json
ios-deps/overlay-ports/osg/: ios-minimal-targets.patch  ios-modern-gl4es.patch  portfile.cmake  static-exports.patch  unofficial-osg-config.cmake  vcpkg.json
ios-deps/overlay-ports/recastnavigation/: ios-navigation-only.patch  portfile.cmake  vcpkg.json
ios-deps/smoke/: BoostProbe.cpp  BulletProbe.cpp  CMakeLists.txt  FFmpegProbe.cpp  IcuProbe.cpp  Info.plist.in  JpegProbe.c  LuaProbe.cpp  Main.mm  MyGUIProbe.cpp  OpenALProbe.c  RecastProbe.cpp  RenderProbe.cpp  SQLiteProbe.c  TurboJpegProbe.c  YamlProbe.cpp
ios-deps/triplets/: arm64-ios-openmw.cmake  arm64-ios-simulator-openmw.cmake
